--- a/De_Tai__so_5/src/de_tai__so_5/ChinhSuaDatPhong.form
+++ b/De_Tai__so_5/src/de_tai__so_5/ChinhSuaDatPhong.form
@@ -75,20 +75,19 @@
                                   <Component id="btnBoQua" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" attributes="0">
+                                  <EmptySpace min="-2" pref="1" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="1" attributes="0">
                                       <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel5" alignment="1" min="-2" max="-2" attributes="0"/>
                                       <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
-                                      <Component id="jLabel7" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                       <Component id="txtMaKH" max="32767" attributes="0"/>
                                       <Component id="txtMaPhong" max="32767" attributes="0"/>
-                                      <Component id="txtNgayDat" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="txtNgayDat" alignment="0" pref="308" max="32767" attributes="0"/>
                                       <Component id="txtNgayTra" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtTongtien" alignment="0" min="-2" pref="308" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -134,17 +133,7 @@
                       <Component id="txtNgayTra" min="-2" pref="39" max="-2" attributes="0"/>
                       <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jLabel7" min="-2" pref="37" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                          <Component id="txtTongtien" min="-2" pref="41" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnChinhSua" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnXoa" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -203,17 +192,6 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Ng&#xe0;y tr&#x1ea3;:"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel7">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Tahoma" size="24" style="0"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="T&#x1ed5;ng Ti&#x1ec1;n:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="txtMaPhong">
@@ -285,8 +263,6 @@
           <Properties>
             <Property name="dateFormatString" type="java.lang.String" value="dd-MM-yyyy HH:mm:ss"/>
           </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txtTongtien">
         </Component>
       </SubComponents>
     </Container>
